SDK 4.0; fixed build, more changes to simplegame, backdrop xml gone but viewer updated

--- a/pages/code/asdocs/all-classes.html
+++ b/pages/code/asdocs/all-classes.html
@@ -412,6 +412,9 @@
 <td><a href="com/threerings/flash/TextFieldUtil.html">TextFieldUtil</a></td>
 </tr>
 <tr>
+<td><a href="com/threerings/util/Throttle.html">Throttle</a></td>
+</tr>
+<tr>
 <td><a href="com/threerings/util/TimeUtil.html">TimeUtil</a></td>
 </tr>
 <tr>
