--- a/pages/code/asdocs/all-index-E.html
+++ b/pages/code/asdocs/all-index-E.html
@@ -55,7 +55,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("EÂ
  Dispatched when an element inside a property has changed in the shared game state.</td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/PropertySubControl.html#event:ElemChanged">ElemChanged</a> &mdash; Event in interface com.whirled.net.<a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/PropertySubControl.html">PropertySubControl</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/PropertyGetSubControl.html#event:ElemChanged">ElemChanged</a> &mdash; Event in interface com.whirled.net.<a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/PropertyGetSubControl.html">PropertyGetSubControl</a></td>
 </tr>
 <tr>
 <td width="20"></td><td>
@@ -77,7 +77,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("EÂ
  property as a result of calling setAt() or setIn().</td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/ElementChangedEvent.html#ElementChangedEvent()">ElementChangedEvent</a>(type, targetId, propName, newValue, oldValue, key) &mdash; Constructor in class com.whirled.net.<a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/ElementChangedEvent.html">ElementChangedEvent</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/ElementChangedEvent.html#ElementChangedEvent()">ElementChangedEvent</a>(type, propName, newValue, oldValue, key) &mdash; Constructor in class com.whirled.net.<a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/ElementChangedEvent.html">ElementChangedEvent</a></td>
 </tr>
 <tr>
 <td width="20"></td><td>
