--- a/pages/code/asdocs/all-index-M.html
+++ b/pages/code/asdocs/all-index-M.html
@@ -227,7 +227,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("MÂ
  Dispatched on the 'net' subcontrol when a message is sent by any client.</td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/MessageReceivedEvent.html#MessageReceivedEvent()">MessageReceivedEvent</a>(targetId, messageName, value, senderId) &mdash; Constructor in class com.whirled.net.<a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/MessageReceivedEvent.html">MessageReceivedEvent</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/MessageReceivedEvent.html#MessageReceivedEvent()">MessageReceivedEvent</a>(messageName, value, senderId) &mdash; Constructor in class com.whirled.net.<a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/MessageReceivedEvent.html">MessageReceivedEvent</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
