--- a/pages/code/asdocs/all-index-N.html
+++ b/pages/code/asdocs/all-index-N.html
@@ -308,6 +308,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("NÂ
      Normalizes an angle in radians to occupy the [0, 2pi) range.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Throttle.html#noteOp()">noteOp</a>(timeStamp) &mdash; Method in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Throttle.html">Throttle</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Note that an operation occurred at the specified timestamp.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/ObserverList.html#_notifyPolicy">_notifyPolicy</a> &mdash; Property in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/ObserverList.html">ObserverList</a></td>
 </tr>
 <tr>
