--- a/pages/code/asdocs/all-index-P.html
+++ b/pages/code/asdocs/all-index-P.html
@@ -154,6 +154,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("PÂ
      reported.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Throttle.html#_period">_period</a> &mdash; Property in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Throttle.html">Throttle</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/KeyboardCodes.html#PERIOD">PERIOD</a> &mdash; Constant static property in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/KeyboardCodes.html">KeyboardCodes</a></td>
 </tr>
 <tr>
@@ -463,7 +469,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("PÂ
  Dispatched when a property has changed in the shared game state.</td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/PropertySubControl.html#event:PropChanged">PropChanged</a> &mdash; Event in interface com.whirled.net.<a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/PropertySubControl.html">PropertySubControl</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/PropertyGetSubControl.html#event:PropChanged">PropChanged</a> &mdash; Event in interface com.whirled.net.<a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/PropertyGetSubControl.html">PropertyGetSubControl</a></td>
 </tr>
 <tr>
 <td width="20"></td><td>
@@ -505,7 +511,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("PÂ
  validated on the server.</td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/PropertyChangedEvent.html#PropertyChangedEvent()">PropertyChangedEvent</a>(type, targetId, propName, newValue, oldValue) &mdash; Constructor in class com.whirled.net.<a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/PropertyChangedEvent.html">PropertyChangedEvent</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/PropertyChangedEvent.html#PropertyChangedEvent()">PropertyChangedEvent</a>(type, propName, newValue, oldValue) &mdash; Constructor in class com.whirled.net.<a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/PropertyChangedEvent.html">PropertyChangedEvent</a></td>
 </tr>
 <tr>
 <td width="20"></td><td>
