--- a/pages/code/asdocs/all-index-R.html
+++ b/pages/code/asdocs/all-index-R.html
@@ -155,6 +155,15 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("RÂ
      Register named states that can be selected by the wearer of this avatar.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Throttle.html#reinit()">reinit</a>(operations, period) &mdash; Method in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Throttle.html">Throttle</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Updates the number of operations for this throttle to a new maximum, retaining the current
+     history of operations if the limit is being increased and truncating the oldest operations
+     if the limit is decreased.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/MultiLoader.html#_remaining">_remaining</a> &mdash; Property in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/MultiLoader.html">MultiLoader</a></td>
 </tr>
 <tr>
