--- a/pages/code/asdocs/com/threerings/util/class-list.html
+++ b/pages/code/asdocs/com/threerings/util/class-list.html
@@ -181,6 +181,9 @@
 <td><a href="StringUtil.html">StringUtil</a></td>
 </tr>
 <tr>
+<td><a href="Throttle.html">Throttle</a></td>
+</tr>
+<tr>
 <td><a href="TimeUtil.html">TimeUtil</a></td>
 </tr>
 <tr>
