--- a/pages/code/asdocs/com/threerings/util/package-detail.html
+++ b/pages/code/asdocs/com/threerings/util/package-detail.html
@@ -244,13 +244,17 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Pa
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="StringUtil.html">StringUtil</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 <tr class="prow0">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="Throttle.html">Throttle</a></td><td class="summaryTableLastCol">
+ A throttle is used to prevent code from attempting a particular operation too often.</td>
+</tr>
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="TimeUtil.html">TimeUtil</a></td><td class="summaryTableLastCol">
  Utility for times.</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="Util.html">Util</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="ValueEvent.html">ValueEvent</a></td><td class="summaryTableLastCol">
  A handy event for simply dispatching a value associated with the event type.</td>
 </tr>
