--- a/pages/code/asdocs/com/whirled/avrg/PlayerSubControlClient.html
+++ b/pages/code/asdocs/com/whirled/avrg/PlayerSubControlClient.html
@@ -160,6 +160,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="hideInheritedMethod">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="../TargetedSubControl.html#getTargetId()">getTargetId</a>():int</div>
+<div class="summaryTableDescription">
+     Get the targetId on which this control operates.</div>
+</td><td class="summaryTableOwnerCol"><a href="../TargetedSubControl.html">TargetedSubControl</a></td>
+</tr>
+<tr class="hideInheritedMethod">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="PlayerSubControlBase.html#holdsTrophy()">holdsTrophy</a>(ident:String):Boolean</div>
 <div class="summaryTableDescription">
      Returns true if this client's player (the default) or a specified player has the trophy
