--- a/pages/code/asdocs/com/whirled/game/LocalSubControl.html
+++ b/pages/code/asdocs/com/whirled/game/LocalSubControl.html
@@ -580,7 +580,8 @@ showHideInherited();
      </p><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
-<td width="20px"></td><td><code><span class="label">itemType</span>:String</code></td>
+<td width="20px"></td><td><code><span class="label">itemType</span>:String</code> &mdash; string constants are defined on GameControl 
+     </td>
 </tr>
 <tr>
 <td class="paramSpacer">&nbsp;</td>
