--- a/pages/code/contrib/asdocs/all-index-A.html
+++ b/pages/code/contrib/asdocs/all-index-A.html
@@ -592,22 +592,23 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("AÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/OfflineTickedMessageManager.html#addMessageFactory()">addMessageFactory</a>(messageName, factory:<a href="com/whirled/contrib/simplegame/net/MessageFactory.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net./class-list.html');">com.whirled.contrib.simplegame.net:MessageFactory</a>) &mdash; Method in class com.whirled.contrib.simplegame.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/OfflineTickedMessageManager.html">OfflineTickedMessageManager</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/OfflineTickedMessageManager.html#addMessageType()">addMessageType</a>(messageClass) &mdash; Method in class com.whirled.contrib.simplegame.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/OfflineTickedMessageManager.html">OfflineTickedMessageManager</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/OnlineTickedMessageManager.html#addMessageFactory()">addMessageFactory</a>(messageName, factory:<a href="com/whirled/contrib/simplegame/net/MessageFactory.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net./class-list.html');">com.whirled.contrib.simplegame.net:MessageFactory</a>) &mdash; Method in class com.whirled.contrib.simplegame.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/OnlineTickedMessageManager.html">OnlineTickedMessageManager</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/OnlineTickedMessageManager.html#addMessageType()">addMessageType</a>(messageClass) &mdash; Method in class com.whirled.contrib.simplegame.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/OnlineTickedMessageManager.html">OnlineTickedMessageManager</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/TickedMessageManager.html#addMessageFactory()">addMessageFactory</a>(messageName, factory:<a href="com/whirled/contrib/simplegame/net/MessageFactory.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net./class-list.html');">com.whirled.contrib.simplegame.net:MessageFactory</a>) &mdash; Method in interface com.whirled.contrib.simplegame.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/TickedMessageManager.html">TickedMessageManager</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/TickedMessageManager.html#addMessageType()">addMessageType</a>(messageClass) &mdash; Method in interface com.whirled.contrib.simplegame.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/TickedMessageManager.html">TickedMessageManager</a></td>
 </tr>
 <tr>
-<td width="20"></td><td></td>
+<td width="20"></td><td>
+     Registers a message type with the TickedMessageManager.</td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/NodeMoveLayer.html#ADD_MODE">ADD_MODE</a> &mdash; Constant static property in class com.whirled.contrib.platformer.editor.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/NodeMoveLayer.html">NodeMoveLayer</a></td>
