--- a/pages/code/contrib/asdocs/all-index-F.html
+++ b/pages/code/contrib/asdocs/all-index-F.html
@@ -545,6 +545,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("FÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/Message.html#fromBytes()">fromBytes</a>(ba) &mdash; Method in interface com.whirled.contrib.simplegame.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/Message.html">Message</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/tasks/class-list.html');" href="com/whirled/contrib/simplegame/tasks/LocationTask.html#_fromX">_fromX</a> &mdash; Property in class com.whirled.contrib.simplegame.tasks.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/tasks/class-list.html');" href="com/whirled/contrib/simplegame/tasks/LocationTask.html">LocationTask</a></td>
 </tr>
 <tr>
