--- a/pages/code/contrib/asdocs/all-index-T.html
+++ b/pages/code/contrib/asdocs/all-index-T.html
@@ -626,6 +626,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("TÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/Message.html#toBytes()">toBytes</a>(ba) &mdash; Method in interface com.whirled.contrib.simplegame.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/Message.html">Message</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/EditSprite.html#toggleGrid()">toggleGrid</a>() &mdash; Method in class com.whirled.contrib.platformer.editor.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/EditSprite.html">EditSprite</a></td>
 </tr>
 <tr>
@@ -749,12 +755,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("TÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/Rect.html#toString()">toString</a>() &mdash; Method in class com.whirled.contrib.platformer.piece.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/Rect.html">Rect</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/Message.html#toString()">toString</a>() &mdash; Method in interface com.whirled.contrib.simplegame.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/Message.html">Message</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
