--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/BitmapSectionalLayer.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/BitmapSectionalLayer.html
@@ -66,11 +66,11 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">BitmapSectionalLayer</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_oldnX">_oldnX</a> : int<div class="summaryTableDescription"></div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_oldnX">_oldnX</a> : int = -1<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">BitmapSectionalLayer</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_oldnY">_oldnY</a> : int<div class="summaryTableDescription"></div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_oldnY">_oldnY</a> : int = -1<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">BitmapSectionalLayer</td>
 </tr>
 <tr class="">
@@ -169,7 +169,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>protected var _oldnX:int</code>
+<code>protected var _oldnX:int = -1</code>
 </div>
 <a name="_oldnY"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -178,7 +178,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>protected var _oldnY:int</code>
+<code>protected var _oldnY:int = -1</code>
 </div>
 <a name="_pool"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
