--- a/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/ObjectDB.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/ObjectDB.html
@@ -486,8 +486,8 @@ showHideInherited();
 <code>public function getObjectRefsInGroup(groupName:String):Array</code><p>
      Returns an Array containing the object refs of all the objects in the given group.
      This Array must not be modified by client code.
-          Note: because of the method that object destruction is implemented with,
-     the returned Array may contain null object refs.
+          Note: the returned Array will contain null object refs for objects that were destroyed
+     this frame and haven't yet been cleaned up.
      </p><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
