--- a/pages/code/asdocs/all-index-T.html
+++ b/pages/code/asdocs/all-index-T.html
@@ -81,20 +81,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("TÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/MessageReceivedEvent.html#targetId">targetId</a> &mdash; Property in class com.whirled.net.<a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/MessageReceivedEvent.html">MessageReceivedEvent</a></td>
-</tr>
-<tr>
-<td width="20"></td><td>
-     Access the id of the recipient of this message.</td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/PropertyChangedEvent.html#targetId">targetId</a> &mdash; Property in class com.whirled.net.<a onclick="javascript:loadClassListFrame('com/whirled/net/class-list.html');" href="com/whirled/net/PropertyChangedEvent.html">PropertyChangedEvent</a></td>
-</tr>
-<tr>
-<td width="20"></td><td>
-     Access the id of the recipient of this message.</td>
-</tr>
-<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Log.html#_targets">_targets</a> &mdash; Static property in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Log.html">Log</a></td>
 </tr>
 <tr>
@@ -165,6 +151,39 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("TÂ
 </tr>
 <tr>
 <td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Throttle.html">Throttle</a> &mdash; Class in package <a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/package-detail.html">com.threerings.util</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+ A throttle is used to prevent code from attempting a particular operation too often.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Throttle.html#Throttle()">Throttle</a>(operations, period) &mdash; Constructor in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Throttle.html">Throttle</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Constructs a new throttle instance that will allow the specified number of operations to
+     proceed within the specified period (the period is measured in milliseconds).</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Throttle.html#throttleOp()">throttleOp</a>() &mdash; Method in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Throttle.html">Throttle</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Registers an attempt at an operation and returns true if the operation should be performed
+     or false if it should be throttled (meaning N operations have already been performed in the
+     last M seconds).</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Throttle.html#throttleOpAt()">throttleOpAt</a>(timeStamp) &mdash; Method in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Throttle.html">Throttle</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Registers an attempt at an operation and returns true if the operation should be performed
+     or false if it should be throttled (meaning N operations have already been performed in the
+     last M seconds).</td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/BackgroundJPGEncoder.html#_timer">_timer</a> &mdash; Property in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/BackgroundJPGEncoder.html">BackgroundJPGEncoder</a></td>
@@ -390,6 +409,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("TÂ
 <tr>
 <td width="20"></td><td>
      Nicely format the specified object into a String.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Throttle.html#toString()">toString</a>() &mdash; Method in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Throttle.html">Throttle</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/class-list.html');" href="com/whirled/ControlEvent.html#toString()">toString</a>() &mdash; Method in class com.whirled.<a onclick="javascript:loadClassListFrame('com/whirled/class-list.html');" href="com/whirled/ControlEvent.html">ControlEvent</a></td>
