--- a/pages/code/asdocs/class-summary.html
+++ b/pages/code/asdocs/class-summary.html
@@ -821,47 +821,53 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Al
 </td><td class="summaryTableCol"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/package-detail.html">com.threerings.flash</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 <tr class="prow0">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="com/threerings/util/Throttle.html">Throttle</a>
+<br>
+</td><td class="summaryTableCol"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/package-detail.html">com.threerings.util</a></td><td class="summaryTableLastCol">
+ A throttle is used to prevent code from attempting a particular operation too often.</td>
+</tr>
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="com/threerings/util/TimeUtil.html">TimeUtil</a>
 <br>
 </td><td class="summaryTableCol"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/package-detail.html">com.threerings.util</a></td><td class="summaryTableLastCol">
  Utility for times.</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="com/whirled/ToyControl.html">ToyControl</a>
 <br>
 </td><td class="summaryTableCol"><a onclick="javascript:loadClassListFrame('com/whirled/class-list.html');" href="com/whirled/package-detail.html">com.whirled</a></td><td class="summaryTableLastCol">
  Used to create Toys: interactive furniture, usually with some shared state.</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="com/whirled/game/UserChatEvent.html">UserChatEvent</a>
 <br>
 </td><td class="summaryTableCol"><a onclick="javascript:loadClassListFrame('com/whirled/game/class-list.html');" href="com/whirled/game/package-detail.html">com.whirled.game</a></td><td class="summaryTableLastCol">
  Dispatched when a player speaks.</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="com/threerings/util/Util.html">Util</a>
 <br>
 </td><td class="summaryTableCol"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/package-detail.html">com.threerings.util</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="com/threerings/util/ValueEvent.html">ValueEvent</a>
 <br>
 </td><td class="summaryTableCol"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/package-detail.html">com.threerings.util</a></td><td class="summaryTableLastCol">
  A handy event for simply dispatching a value associated with the event type.</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="com/threerings/flash/Vector2.html">Vector2</a>
 <br>
 </td><td class="summaryTableCol"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/package-detail.html">com.threerings.flash</a></td><td class="summaryTableLastCol">
  Basic 2D vector implementation.</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="com/threerings/flash/Vector3.html">Vector3</a>
 <br>
 </td><td class="summaryTableCol"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/package-detail.html">com.threerings.flash</a></td><td class="summaryTableLastCol">
  Basic 3D vector implementation.</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="com/threerings/flash/VideoDisplayer.html">VideoDisplayer</a>
 <br>
 </td><td class="summaryTableCol"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/package-detail.html">com.threerings.flash</a></td><td class="summaryTableLastCol">&nbsp;</td>
