--- a/pages/code/asdocs/com/whirled/TargetedSubControl.html
+++ b/pages/code/asdocs/com/whirled/TargetedSubControl.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../print.css" type="text/css" media="print">
-<meta content="TargetedSubControl,com.whirled.TargetedSubControl" name="keywords">
+<meta content="TargetedSubControl,com.whirled.TargetedSubControl,getTargetId" name="keywords">
 <title>com.whirled.TargetedSubControl</title>
 </head>
 <body>
@@ -92,6 +92,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
      together.</div>
 </td><td class="summaryTableOwnerCol"><a href="AbstractSubControl.html">AbstractSubControl</a></td>
 </tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#getTargetId()">getTargetId</a>():int</div>
+<div class="summaryTableDescription">
+     Get the targetId on which this control operates.</div>
+</td><td class="summaryTableOwnerCol">TargetedSubControl</td>
+</tr>
 <tr class="hideInheritedMethod">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
@@ -163,6 +171,25 @@ showHideInherited();
 </tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">targetId</span>:int</code></td>
+</tr>
+</table>
+</div>
+<a name="methodDetail"></a>
+<div class="detailSectionHeader">Method detail</div>
+<a name="getTargetId()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">getTargetId</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function getTargetId():int</code><p>
+     Get the targetId on which this control operates.
+     </p><p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>int</code></td>
 </tr>
 </table>
 </div>
