--- a/pages/code/asdocs/com/whirled/avrg/PlayerSubControlBase.html
+++ b/pages/code/asdocs/com/whirled/avrg/PlayerSubControlBase.html
@@ -146,6 +146,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
      Accesses the id of the room that this player is in.</div>
 </td><td class="summaryTableOwnerCol">PlayerSubControlBase</td>
 </tr>
+<tr class="hideInheritedMethod">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="../TargetedSubControl.html#getTargetId()">getTargetId</a>():int</div>
+<div class="summaryTableDescription">
+     Get the targetId on which this control operates.</div>
+</td><td class="summaryTableOwnerCol"><a href="../TargetedSubControl.html">TargetedSubControl</a></td>
+</tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
