--- a/pages/code/asdocs/com/whirled/net/MessageReceivedEvent.html
+++ b/pages/code/asdocs/com/whirled/net/MessageReceivedEvent.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../print.css" type="text/css" media="print">
-<meta content="MessageReceivedEvent,com.whirled.net.MessageReceivedEvent,MESSAGE_RECEIVED,SERVER_AGENT_ID,SERVER_ID,name,senderId,targetId,value,clone,isFromServer,toString" name="keywords">
+<meta content="MessageReceivedEvent,com.whirled.net.MessageReceivedEvent,MESSAGE_RECEIVED,SERVER_AGENT_ID,SERVER_ID,name,senderId,value,clone,isFromServer,toString" name="keywords">
 <title>com.whirled.net.MessageReceivedEvent</title>
 </head>
 <body>
@@ -65,11 +65,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">MessageReceivedEvent</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#targetId">targetId</a> : int<div class="summaryTableDescription">[read-only]
-     Access the id of the recipient of this message.</div>
-</td><td class="summaryTableOwnerCol">MessageReceivedEvent</td>
-</tr>
-<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#value">value</a> : Object<div class="summaryTableDescription">[read-only]
      Access the message value.</div>
 </td><td class="summaryTableOwnerCol">MessageReceivedEvent</td>
@@ -86,7 +81,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#MessageReceivedEvent()">MessageReceivedEvent</a>(targetId:int, messageName:String, value:Object, senderId:int)</div>
+<a class="signatureLink" href="#MessageReceivedEvent()">MessageReceivedEvent</a>(messageName:String, value:Object, senderId:int)</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">MessageReceivedEvent</td>
 </tr>
@@ -190,20 +185,6 @@ showHideInherited();
 <a href="../net/MessageReceivedEvent.html#isFromServer()" target="">isFromServer()</a>
 </div>
 </div>
-<a name="targetId"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">targetId</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>targetId:int</code>&nbsp;&nbsp;[read-only]<p>
-     Access the id of the recipient of this message.
-     </p><span class="label">Implementation</span>
-<br>
-<code>&nbsp;&nbsp;&nbsp;&nbsp;public function get targetId():int</code>
-<br>
-</div>
 <a name="value"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -227,14 +208,8 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function MessageReceivedEvent(targetId:int, messageName:String, value:Object, senderId:int)</code><span class="label">Parameters</span>
+<code>public function MessageReceivedEvent(messageName:String, value:Object, senderId:int)</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
-<tr>
-<td width="20px"></td><td><code><span class="label">targetId</span>:int</code></td>
-</tr>
-<tr>
-<td class="paramSpacer">&nbsp;</td>
-</tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">messageName</span>:String</code></td>
 </tr>
