--- a/pages/code/asdocs/com/whirled/net/PropertyChangedEvent.html
+++ b/pages/code/asdocs/com/whirled/net/PropertyChangedEvent.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../print.css" type="text/css" media="print">
-<meta content="PropertyChangedEvent,com.whirled.net.PropertyChangedEvent,PROPERTY_CHANGED,name,newValue,oldValue,targetId,clone,toString" name="keywords">
+<meta content="PropertyChangedEvent,com.whirled.net.PropertyChangedEvent,PROPERTY_CHANGED,name,newValue,oldValue,clone,toString" name="keywords">
 <title>com.whirled.net.PropertyChangedEvent</title>
 </head>
 <body>
@@ -73,11 +73,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
      Get the property's previous value (handy!).</div>
 </td><td class="summaryTableOwnerCol">PropertyChangedEvent</td>
 </tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#targetId">targetId</a> : int<div class="summaryTableDescription">[read-only]
-     Access the id of the recipient of this message.</div>
-</td><td class="summaryTableOwnerCol">PropertyChangedEvent</td>
-</tr>
 </table>
 </div>
 <a name="methodSummary"></a>
@@ -90,7 +85,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#PropertyChangedEvent()">PropertyChangedEvent</a>(type:String, targetId:int, propName:String, newValue:Object, oldValue:Object)</div>
+<a class="signatureLink" href="#PropertyChangedEvent()">PropertyChangedEvent</a>(type:String, propName:String, newValue:Object, oldValue:Object)</div>
 <div class="summaryTableDescription">
      Constructor.</div>
 </td><td class="summaryTableOwnerCol">PropertyChangedEvent</td>
@@ -176,20 +171,6 @@ showHideInherited();
 <code>&nbsp;&nbsp;&nbsp;&nbsp;public function get oldValue():Object</code>
 <br>
 </div>
-<a name="targetId"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">targetId</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>targetId:int</code>&nbsp;&nbsp;[read-only]<p>
-     Access the id of the recipient of this message.
-     </p><span class="label">Implementation</span>
-<br>
-<code>&nbsp;&nbsp;&nbsp;&nbsp;public function get targetId():int</code>
-<br>
-</div>
 <a name="constructorDetail"></a>
 <div class="detailSectionHeader">Constructor detail</div>
 <a name="PropertyChangedEvent()"></a>
@@ -199,18 +180,12 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function PropertyChangedEvent(type:String, targetId:int, propName:String, newValue:Object, oldValue:Object)</code><p>
+<code>public function PropertyChangedEvent(type:String, propName:String, newValue:Object, oldValue:Object)</code><p>
      Constructor.
      </p><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">type</span>:String</code></td>
-</tr>
-<tr>
-<td class="paramSpacer">&nbsp;</td>
-</tr>
-<tr>
-<td width="20px"></td><td><code><span class="label">targetId</span>:int</code></td>
 </tr>
 <tr>
 <td class="paramSpacer">&nbsp;</td>
