--- a/pages/code/contrib/asdocs/com/whirled/contrib/EventHandlers.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/EventHandlers.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../print.css" type="text/css" media="print">
-<meta content="EventHandlers,com.whirled.contrib.EventHandlers,_mgr,freeAllHandlers,registerEventListener,registerOneShotCallback,registerUnload,unregisterEventListener" name="keywords">
+<meta content="EventHandlers,com.whirled.contrib.EventHandlers,_mgr,freeAllHandlers,getGlobalManager,registerEventListener,registerOneShotCallback,registerUnload,unregisterEventListener" name="keywords">
 <title>com.whirled.contrib.EventHandlers</title>
 </head>
 <body>
@@ -80,6 +80,15 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#getGlobalManager()">getGlobalManager</a>():<a href="../contrib/EventHandlerManager.html">EventHandlerManager</a>
+</div>
+<div class="summaryTableDescription">[static]
+     Returns the global manager that is accessed by all of the static members of this class.</div>
+</td><td class="summaryTableOwnerCol">EventHandlers</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#registerEventListener()">registerEventListener</a>(dispatcher:IEventDispatcher, event:String, listener:Function, useCapture:Boolean = false, priority:int = 0, useWeakReference:Boolean = false):void</div>
 <div class="summaryTableDescription">[static]
      Adds the specified listener to the specified dispatcher for the specified event.</div>
@@ -144,6 +153,23 @@ showHideInherited();
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code>... <span class="label">ignored</span></code></td>
+</tr>
+</table>
+</div>
+<a name="getGlobalManager()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">getGlobalManager</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static function getGlobalManager():<a href="../contrib/EventHandlerManager.html">EventHandlerManager</a></code><p>
+     Returns the global manager that is accessed by all of the static members of this class.
+     </p><p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code><a href="../contrib/EventHandlerManager.html">EventHandlerManager</a></code></td>
 </tr>
 </table>
 </div>
