--- a/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/net/Message.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/net/Message.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="Message,com.whirled.contrib.simplegame.net.Message,name,toString" name="keywords">
+<meta content="Message,com.whirled.contrib.simplegame.net.Message,name,fromBytes,toBytes" name="keywords">
 <title>com.whirled.contrib.simplegame.net.Message</title>
 </head>
 <body>
@@ -66,7 +66,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("In
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#toString()">toString</a>():String</div>
+<a class="signatureLink" href="#fromBytes()">fromBytes</a>(ba:ByteArray):void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Message</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#toBytes()">toBytes</a>(ba:ByteArray = null):ByteArray</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Message</td>
 </tr>
@@ -93,19 +100,38 @@ showHideInherited();
 </div>
 <a name="methodDetail"></a>
 <div class="detailSectionHeader">Method detail</div>
-<a name="toString()"></a>
+<a name="fromBytes()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">toString</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
+<td class="detailHeaderName">fromBytes</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
 </tr>
 </table>
 <div class="detailBody">
-<code>public function toString():String</code>
+<code>public function fromBytes(ba:ByteArray):void</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">ba</span>:ByteArray</code></td>
+</tr>
+</table>
+</div>
+<a name="toBytes()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">toBytes</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function toBytes(ba:ByteArray = null):ByteArray</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">ba</span>:ByteArray</code> (default = <code>null</code>)<code></code></td>
+</tr>
+</table>
 <p></p>
 <span class="label">Returns</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
-<td width="20"></td><td><code>String</code></td>
+<td width="20"></td><td><code>ByteArray</code></td>
 </tr>
 </table>
 </div>
