--- a/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/net/OfflineTickedMessageManager.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/net/OfflineTickedMessageManager.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="OfflineTickedMessageManager,com.whirled.contrib.simplegame.net.OfflineTickedMessageManager,_gameCtrl,_msTillNextTick,_randSeed,_tickIntervalMS,_ticks,isReady,randomSeed,unprocessedTickCount,addMessageFactory,canSendMessage,getNextTick,sendMessage,setup,shutdown,update" name="keywords">
+<meta content="OfflineTickedMessageManager,com.whirled.contrib.simplegame.net.OfflineTickedMessageManager,_gameCtrl,_msTillNextTick,_randSeed,_tickIntervalMS,_ticks,isReady,randomSeed,unprocessedTickCount,addMessageType,canSendMessage,getNextTick,run,sendMessage,stop,update" name="keywords">
 <title>com.whirled.contrib.simplegame.net.OfflineTickedMessageManager</title>
 </head>
 <body>
@@ -113,7 +113,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#addMessageFactory()">addMessageFactory</a>(messageName:String, factory:<a href="MessageFactory.html">MessageFactory</a>):void</div>
+<a class="signatureLink" href="#addMessageType()">addMessageType</a>(messageClass:Class):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">OfflineTickedMessageManager</td>
 </tr>
@@ -134,6 +134,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#run()">run</a>():void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">OfflineTickedMessageManager</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#sendMessage()">sendMessage</a>(msg:<a href="Message.html">Message</a>):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">OfflineTickedMessageManager</td>
@@ -141,14 +148,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#setup()">setup</a>():void</div>
-<div class="summaryTableDescription"></div>
-</td><td class="summaryTableOwnerCol">OfflineTickedMessageManager</td>
-</tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
-<div class="summarySignature">
-<a class="signatureLink" href="#shutdown()">shutdown</a>():void</div>
+<a class="signatureLink" href="#stop()">stop</a>():void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">OfflineTickedMessageManager</td>
 </tr>
@@ -273,23 +273,17 @@ showHideInherited();
 </div>
 <a name="methodDetail"></a>
 <div class="detailSectionHeader">Method detail</div>
-<a name="addMessageFactory()"></a>
+<a name="addMessageType()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">addMessageFactory</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
+<td class="detailHeaderName">addMessageType</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
 </tr>
 </table>
 <div class="detailBody">
-<code>public function addMessageFactory(messageName:String, factory:<a href="MessageFactory.html">MessageFactory</a>):void</code><span class="label">Parameters</span>
+<code>public function addMessageType(messageClass:Class):void</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
-<td width="20px"></td><td><code><span class="label">messageName</span>:String</code></td>
-</tr>
-<tr>
-<td class="paramSpacer">&nbsp;</td>
-</tr>
-<tr>
-<td width="20px"></td><td><code><span class="label">factory</span>:<a href="MessageFactory.html">MessageFactory</a></code></td>
+<td width="20px"></td><td><code><span class="label">messageClass</span>:Class</code></td>
 </tr>
 </table>
 </div>
@@ -325,6 +319,15 @@ showHideInherited();
 </tr>
 </table>
 </div>
+<a name="run()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">run</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function run():void</code>
+</div>
 <a name="sendMessage()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -339,23 +342,14 @@ showHideInherited();
 </tr>
 </table>
 </div>
-<a name="setup()"></a>
+<a name="stop()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">setup</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+<td class="detailHeaderName">stop</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
-<code>public function setup():void</code>
-</div>
-<a name="shutdown()"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">shutdown</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>public function shutdown():void</code>
+<code>public function stop():void</code>
 </div>
 <a name="update()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
