--- a/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/net/OnlineTickedMessageManager.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/net/OnlineTickedMessageManager.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="OnlineTickedMessageManager,com.whirled.contrib.simplegame.net.OnlineTickedMessageManager,_gameCtrl,_isFirstPlayer,_lastSendTime,_maxPendingSends,_messageFactories,_minSendDelayMS,_pendingSends,_receivedFirstTick,_tickIntervalMS,_tickName,_ticks,log,isReady,unprocessedTickCount,maxPendingSends,maxSendsPerSecond,addMessageFactory,canSendMessage,canSendMessageNow,deserializeMessage,getNextTick,handleGameStarted,msgReceived,sendMessage,sendMessageNow,serializeMessage,setup,shutdown,update" name="keywords">
+<meta content="OnlineTickedMessageManager,com.whirled.contrib.simplegame.net.OnlineTickedMessageManager,_events,_gameCtrl,_isFirstPlayer,_lastSendTime,_maxPendingSends,_messageTypes,_minSendDelayMS,_pendingSends,_receivedFirstTick,_tickIntervalMS,_tickName,_ticks,log,isReady,unprocessedTickCount,maxPendingSends,maxSendsPerSecond,addMessageType,canSendMessage,canSendMessageNow,deserializeMessage,getNextTick,onMessageReceived,run,sendMessage,sendMessageNow,stop,update" name="keywords">
 <title>com.whirled.contrib.simplegame.net.OnlineTickedMessageManager</title>
 </head>
 <body>
@@ -82,6 +82,11 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <th>&nbsp;</th><th colspan="2">Property</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
 </tr>
 <tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_events">_events</a> : <a href="../../../contrib/EventHandlerManager.html">EventHandlerManager</a>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">OnlineTickedMessageManager</td>
+</tr>
+<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_gameCtrl">_gameCtrl</a> : GameControl<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">OnlineTickedMessageManager</td>
 </tr>
@@ -98,7 +103,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">OnlineTickedMessageManager</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_messageFactories">_messageFactories</a> : HashMap<div class="summaryTableDescription"></div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_messageTypes">_messageTypes</a> : HashMap<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">OnlineTickedMessageManager</td>
 </tr>
 <tr class="">
@@ -144,7 +149,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#addMessageFactory()">addMessageFactory</a>(messageName:String, factory:<a href="MessageFactory.html">MessageFactory</a>):void</div>
+<a class="signatureLink" href="#addMessageType()">addMessageType</a>(messageClass:Class):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">OnlineTickedMessageManager</td>
 </tr>
@@ -165,6 +170,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#run()">run</a>():void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">OnlineTickedMessageManager</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#sendMessage()">sendMessage</a>(msg:<a href="Message.html">Message</a>):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">OnlineTickedMessageManager</td>
@@ -172,14 +184,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#setup()">setup</a>():void</div>
-<div class="summaryTableDescription"></div>
-</td><td class="summaryTableOwnerCol">OnlineTickedMessageManager</td>
-</tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
-<div class="summarySignature">
-<a class="signatureLink" href="#shutdown()">shutdown</a>():void</div>
+<a class="signatureLink" href="#stop()">stop</a>():void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">OnlineTickedMessageManager</td>
 </tr>
@@ -209,7 +214,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#deserializeMessage()">deserializeMessage</a>(name:String, serialized:Object):<a href="../net/Message.html">Message</a>
+<a class="signatureLink" href="#deserializeMessage()">deserializeMessage</a>(name:String, val:Object):<a href="../net/Message.html">Message</a>
 </div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">OnlineTickedMessageManager</td>
@@ -217,14 +222,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#handleGameStarted()">handleGameStarted</a>(... ignored):void</div>
-<div class="summaryTableDescription"></div>
-</td><td class="summaryTableOwnerCol">OnlineTickedMessageManager</td>
-</tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
-<div class="summarySignature">
-<a class="signatureLink" href="#msgReceived()">msgReceived</a>(event:MessageReceivedEvent):void</div>
+<a class="signatureLink" href="#onMessageReceived()">onMessageReceived</a>(event:MessageReceivedEvent):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">OnlineTickedMessageManager</td>
 </tr>
@@ -232,13 +230,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#sendMessageNow()">sendMessageNow</a>(msg:<a href="Message.html">Message</a>):void</div>
-<div class="summaryTableDescription"></div>
-</td><td class="summaryTableOwnerCol">OnlineTickedMessageManager</td>
-</tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
-<div class="summarySignature">
-<a class="signatureLink" href="#serializeMessage()">serializeMessage</a>(msg:<a href="Message.html">Message</a>):Object</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">OnlineTickedMessageManager</td>
 </tr>
@@ -264,10 +255,19 @@ showHideInherited();
 <div class="MainContent">
 <a name="propertyDetail"></a>
 <div class="detailSectionHeader">Property detail</div>
+<a name="_events"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_events</td><td class="detailHeaderType">property</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _events:<a href="../../../contrib/EventHandlerManager.html">EventHandlerManager</a></code>
+</div>
 <a name="_gameCtrl"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">_gameCtrl</td><td class="detailHeaderType">property</td>
+<td class="detailHeaderName">_gameCtrl</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
@@ -336,14 +336,14 @@ showHideInherited();
 <code>&nbsp;&nbsp;&nbsp;&nbsp;public function set maxSendsPerSecond(value:uint):void</code>
 <br>
 </div>
-<a name="_messageFactories"></a>
+<a name="_messageTypes"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">_messageFactories</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+<td class="detailHeaderName">_messageTypes</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
-<code>protected var _messageFactories:HashMap</code>
+<code>protected var _messageTypes:HashMap</code>
 </div>
 <a name="_minSendDelayMS"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -447,23 +447,17 @@ showHideInherited();
 </div>
 <a name="methodDetail"></a>
 <div class="detailSectionHeader">Method detail</div>
-<a name="addMessageFactory()"></a>
+<a name="addMessageType()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">addMessageFactory</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
+<td class="detailHeaderName">addMessageType</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
 </tr>
 </table>
 <div class="detailBody">
-<code>public function addMessageFactory(messageName:String, factory:<a href="MessageFactory.html">MessageFactory</a>):void</code><span class="label">Parameters</span>
+<code>public function addMessageType(messageClass:Class):void</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
-<td width="20px"></td><td><code><span class="label">messageName</span>:String</code></td>
-</tr>
-<tr>
-<td class="paramSpacer">&nbsp;</td>
-</tr>
-<tr>
-<td width="20px"></td><td><code><span class="label">factory</span>:<a href="MessageFactory.html">MessageFactory</a></code></td>
+<td width="20px"></td><td><code><span class="label">messageClass</span>:Class</code></td>
 </tr>
 </table>
 </div>
@@ -506,7 +500,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>protected function deserializeMessage(name:String, serialized:Object):<a href="../net/Message.html">Message</a></code><span class="label">Parameters</span>
+<code>protected function deserializeMessage(name:String, val:Object):<a href="../net/Message.html">Message</a></code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">name</span>:String</code></td>
@@ -515,7 +509,7 @@ showHideInherited();
 <td class="paramSpacer">&nbsp;</td>
 </tr>
 <tr>
-<td width="20px"></td><td><code><span class="label">serialized</span>:Object</code></td>
+<td width="20px"></td><td><code><span class="label">val</span>:Object</code></td>
 </tr>
 </table>
 <p></p>
@@ -542,33 +536,28 @@ showHideInherited();
 </tr>
 </table>
 </div>
-<a name="handleGameStarted()"></a>
+<a name="onMessageReceived()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">handleGameStarted</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+<td class="detailHeaderName">onMessageReceived</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
-<code>protected function handleGameStarted(... ignored):void</code><span class="label">Parameters</span>
-<table border="0" cellspacing="0" cellpadding="0">
-<tr>
-<td width="20px"></td><td><code>... <span class="label">ignored</span></code></td>
-</tr>
-</table>
-</div>
-<a name="msgReceived()"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">msgReceived</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>protected function msgReceived(event:MessageReceivedEvent):void</code><span class="label">Parameters</span>
+<code>protected function onMessageReceived(event:MessageReceivedEvent):void</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">event</span>:MessageReceivedEvent</code></td>
 </tr>
 </table>
+</div>
+<a name="run()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">run</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function run():void</code>
 </div>
 <a name="sendMessage()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -598,44 +587,14 @@ showHideInherited();
 </tr>
 </table>
 </div>
-<a name="serializeMessage()"></a>
+<a name="stop()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">serializeMessage</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+<td class="detailHeaderName">stop</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
-<code>protected function serializeMessage(msg:<a href="Message.html">Message</a>):Object</code><span class="label">Parameters</span>
-<table border="0" cellspacing="0" cellpadding="0">
-<tr>
-<td width="20px"></td><td><code><span class="label">msg</span>:<a href="Message.html">Message</a></code></td>
-</tr>
-</table>
-<p></p>
-<span class="label">Returns</span>
-<table border="0" cellspacing="0" cellpadding="0">
-<tr>
-<td width="20"></td><td><code>Object</code></td>
-</tr>
-</table>
-</div>
-<a name="setup()"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">setup</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>public function setup():void</code>
-</div>
-<a name="shutdown()"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">shutdown</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>public function shutdown():void</code>
+<code>public function stop():void</code>
 </div>
 <a name="update()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
